      - Each fluid still has a non-temperature page that shows all properties for that fluid
    - Added highlight on the last selected item (configurable)
    - Added "made in" to the recipe quick reference panel
    - Added required fluid to resource tooltip
    - Added "placeable by" and "unlocked by" to the crafter page
    - Added help message when viewing a blank page
  Changes:
    - Adjusted glyph sizing to fix alignment
    - Adjusted titlebar styling to match the base game
    - Improved interaction help formatting
    - Put the settings gear icon on a diet
    - Recipes and materials that are available at the beginning of the game are now treated as such
    - Separated fluid and item search categories
    - Significantly refactored the data processor to improve code quality, simplify some things, and support fluid temperatures
    - Removed "burnable in" and "compatible fuels" sections, as they were inconsistent and only worked with crafters
  Bugfixes:
    - Fixed a crash with certain modded burner entities
    - Fixed a long-standing bug that materials would be marked as available when usable as an ingredient, even if it was not obtainable
    - Fixed crafter labels showing interaction helps
    - Fixed that even if a page was already open, it would be added again to the session history and re-opened
    - Fixed that hand-minable resource items would be marked as unavailable if no available recipes produced it
    - Fixed the session history active line not lining up with the other lines
    - Fixed that the GUIs would not update when a research was finished (credit to kubiix)
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2021-01-02
  Features:
    - Added compatibility with Factory Planner's dimmer frame - RB will now stay in front of it if both GUIs are open at once
  Bugfixes:
    - Fixed RB GUI not coming to the front when opened