@@ -13,6 +13,7 @@ Date: ????
     - Added required fluid to resource tooltip
     - Added "placeable by" and "unlocked by" to the crafter page
     - Added help message when viewing a blank page
+    - Added technology page and search category (credit to kubiix)
   Changes:
     - Adjusted glyph sizing to fix alignment
     - Adjusted titlebar styling to match the base game
